# framegallery

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  renovate.json  renovate.json5  update_keywords.py
.claude/commands/: commit.md
.github/workflows/: docker-build.yml  quality-js.yml  quality-python.yml  quality.yml
.windsurf/rules/: repository-design.md
alembic/: env.py
alembic/versions/: 2b229181e34b_add_image_model.py  3321dec671a3_add_filters_table.py  37a5f869f63c_reset_initial_migration.py  52a6abce1999_add_keywords_to_images.py  72495173e2ef_add_crop_details_to_image.py  a1b2c3d4e5f6_add_libraries_table.py  e9e94d88de09_initial_migration.py
data/: .gitignore
docs/: alembic.md
docs/alternative-systems/: docent-feature-comparison.md  frame-close-hauled-feature-comparison.md
features/: ability-to-list-files-on-tv.md  frontend-ability-to-list-files-on-tv.md
framegallery/: alembic.ini  aspect_ratio.py  config.py  crud.py  database.py  dependencies.py  image_manipulation.py  logging_config.py  main.py  migrations.py  models.py  schemas.py
framegallery/alembic/: env.py
framegallery/auto_cleanup/: tv_cleanup_service.py
framegallery/configuration/: update_current_active_image_config_listener.py
framegallery/frame_connector/: frame_connector.py  status.py
framegallery/frame_connector/processors/: __init__.py  base.py  batch_slideshow.py  factory.py  single_async.py  sync_thread.py
framegallery/importer/: importer.py
framegallery/importer2/: importer.py
framegallery/libraries/: __init__.py  base.py  factory.py  immich_client.py  immich_library.py  local_library.py  manager.py
framegallery/repository/: config_repository.py  filter_repository.py  image_repository.py  library_repository.py
framegallery/repository/filters/: image_filter.py  query_builder.py
framegallery/routers/: __init__.py  config.py  filters.py  images.py  libraries.py  photos.py  tv_files.py
framegallery/slideshow/: slideshow.py
framegallery/sse/: slideshow_signal_listener.py
tests/integration/framegallery/repository/: filter_repository_test.py  image_repository_test.py  library_repository_test.py  test_config_repository.py
tests/unit/framegallery/: test_slideshow_gating.py
tests/unit/framegallery/database/filters/: image_filter_test.py
tests/unit/framegallery/frame_connector/: test_frame_connector.py
tests/unit/framegallery/frame_connector/processors/: test_base_lifecycle.py  test_batch_slideshow.py  test_factory.py  test_sync_thread.py
tests/unit/framegallery/importer2/: __init__.py  test_keyword_extraction.py
tests/unit/framegallery/libraries/: test_base.py  test_factory.py  test_immich_client.py  test_immich_library.py  test_local_library.py  test_manager.py
tests/unit/framegallery/repository/filters/: image_filter_test.py
tests/unit/framegallery/routers/: image_router_test.py  test_libraries_router.py  test_tv_files_router.py
ui/: .eslintrc.json  .npmrc  craco.config.cjs  eslint.config.js  eslint.config.mjs  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/public/: index.html
ui/src/: App.tsx  SettingsContext.tsx  index.tsx  theme.ts
ui/src/actions/: slideshow.ts
ui/src/components/: ArtItemCard.tsx  ArtItemDialog.tsx  FrameDisplayPreview.tsx  ImageGrid.tsx  SettingsStatus.tsx  StatusBar.tsx  TvFileList.tsx
ui/src/components/CropDialog/: CropDialog.tsx
ui/src/components/Filters/: Filter.ts  FilterBuilder.tsx
ui/src/models/: Album.ts  ArtItem.ts  Image.ts  Library.ts  Photo.ts  Settings.ts  TvFile.ts
ui/src/pages/: Filters.tsx  Libraries.tsx  Settings.tsx  TvFiles.tsx
ui/src/services/: filterService.ts  libraryService.ts  tvFilesService.ts
ui/tests/: jest.setup.ts
ui/tests/components/: ArtItemCard.test.tsx  ArtItemDialog.test.tsx  FrameDisplayPreview.test.tsx  ImageGrid.test.tsx  SettingsStatus.test.tsx  TvFileList.test.tsx
ui/tests/components/Filters/: FilterBuilder.test.tsx
ui/tests/services/: tvFilesService.test.ts
websocket_test/: client.py  server.py
