[tool.poetry]
name = "framegallery"
version = "0.1.0"
description = "A web application for managing own photos on a Samsung Frame"
authors = ["Sebastiaan Knijnenburg <sebastiaan.knijnenburg@gmail.com>"]
license = "GPL"
readme = "README.md"
packages = [{include = "framegallery"}]

[tool.poetry.dependencies]
python = "^3.10"
samsungtvws = {git = "https://github.com/slknijnenburg/samsung-tv-ws-api.git", branch = "master"}
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.9.2"
aiohttp = "^3.10.8"
websockets = "^14.1"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.35"
wakeonlan = "^3.1.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
pillow = "^11.0.0"
pillow-heif = "^0.21.0"
blinker = "^1.8.2"
icmplib = "^3.0.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
