[tool.ruff]
target-version="py311"
# Allow lines to be as long as 120.
line-length = 120
exclude = [
    "alembic",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Redundant if using Ruff formatter which we are.
    "D104",   # Missing docstring in public package
    "D106",   # Missing docstring in public method
    "D107",   # Missing docstring in __init__
    "D100",   # Missing docstring in public module
    "D205",   # 1 blank line required between summary line and description
    "D203",   # Incompatible together with D211
    "D212",   # Incompatible together with D213
    "EM101",  # I can read traces just fine
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
authors = [
    {name = "Sebastiaan Knijnenburg", email = "sebastiaan.knijnenburg@gmail.com"},
]
license = {text = "GPL"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "samsungtvws @ git+https://github.com/slknijnenburg/samsung-tv-ws-api.git@master",
    "fastapi[standard]>=0.115.0,<1.0.0",
    "uvicorn<1.0.0,>=0.34.0",
    "pydantic<3.0.0,>=2.9.2",
    "aiohttp<4.0.0,>=3.10.8",
    "websockets<16.0.0,>=15.0.0",
    "jinja2<4.0.0,>=3.1.4",
    "sqlalchemy<3.0.0,>=2.0.35",
    "wakeonlan<4.0.0,>=3.1.0",
    "alembic<2.0.0,>=1.13.3",
    "pydantic-settings<3.0.0,>=2.6.0",
    "pillow<12.0.0,>=11.0.0",
    "pillow-heif<1.1.0,>=1.0.0",
    "blinker<2.0.0,>=1.8.2",
    "icmplib<4.0.0,>=3.0.4",
    "sse-starlette~=3.0.0", # Added for Server-Sent Events
    "pyexiv2<3.0.0,>=2.0.0", # For reading XMP metadata and keywords
]
name = "framegallery"
version = "0.1.0"
description = "A web application for managing own photos on a Samsung Frame"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest<9.0.0,>=8.3.3",
    "pyright<2.0.0,>=1.1.394",
    "ruff<1.0.0,>=0.9.6",
]
